@@ -1,3 +1,11 @@
+2013-08-19  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/neug.c (repetition_count_test_word)
+	(adaptive_proportion_64_test_word)
+	(adaptive_proportion_4096_test_word)
+	(noise_source_continuous_test_word): New.
+	(ep_fill_wbuf_v): Use noise_source_continuous_test_word.
+
 2013-08-17  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/main.c (main): Fix locking of USB_MTX.
